Reformatted text, Fixed photo not showing bug, Styled the Login page

--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: black;
 }
 /* Set the container to display as a grid */
+
+/* Login Page Styling */
+.loginStylingText {
+  color: whitesmoke;
+}
+
+.loginBoxStyle {
+  background-color: whitesmoke;
+  color: black;
+}
+
+#submitButtonStyle {
+  background-color: white;
+  color: black;
+  padding: 12px;
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1%;
-  width: 100vw;
-}
-#logo {
-  height: 20vh;
-  width: 15vw;
-  position: absolute;
-  left: 11px;
-  top: 22px;
 }
 
 /* Navigation Bar Styling */
@@ -28,9 +38,16 @@
   width: 100vw;
 }
 
+#logo {
+  height: 20vh;
+  width: 15vw;
+  position: absolute;
+  left: 11px;
+  top: 22px;
+}
 /* Style the links inside the navigation bar */
 .navBar a {
-  float:right;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -43,7 +60,7 @@
 }
 /* Change the color of links on hover */
 .navBar a:hover {
-  background-color: orange;
+  background-color: grey;
   color: black;
 }
 #backgroundMain {
@@ -54,99 +71,90 @@
   width: 100vw;
   height: 100vh;
 }
+
 #picture1 {
-  padding: 150px;
+  padding: 20px 20px;
   background-image:url('https://www.azuremagazine.com/wp-content/uploads/2019/02/Architecture-Projects-that-Will-Shape-Torontos-Future-Azure-Hero-800x600.jpg');
-  color: whitesmoke;
-  text-align: center;
   border-color:white;
-  border-style:groove;
+  border-style: groove;
   border-radius: 15px;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture2 {
-  padding: 150px;
-  background-image:url('https://galeriemagazine.com/wp-content/uploads/2022/01/Adjaye-Assocites-Abu-Dhabi-1920x1200.jpg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://galeriemagazine.com/wp-content/uploads/2022/01/Adjaye-Assocites-Abu-Dhabi-1920x1200.jpg');
   border-color:white;
-  border-style:groove;
+  border-style: groove;
   border-radius: 15px;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture3 {
-  padding: 150px;
-  background-image:url('https://cdnassets.hw.net/53/9c/b7a8ca0946a9b40e5f9d6dc5fcf6/uredd-rest-area-haugen-zohar-arkitekter-2019-07.jpg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://cdnassets.hw.net/53/9c/b7a8ca0946a9b40e5f9d6dc5fcf6/uredd-rest-area-haugen-zohar-arkitekter-2019-07.jpg');
   border-color:white;
-  border-style:groove;
+  border-style: groove;
   border-radius: 15px;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture4 {
-  padding: 150px
+  padding: 130px;
   background-image: url('http://cdn.cnn.com/cnnnext/dam/assets/220103124923-05-anticipated-architecture-2022.jpg');
-  color: whitesmoke;
-  text-align: center;
   border-color:white;
-  border-style:groove;
+  border-style: groove;
   border-radius: 15px;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture5 {
-  padding:150px;
-  background-image:url('https://i.insider.com/5d30e292a47b5a103347bdc4?width=1136&format=jpeg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://i.insider.com/5d30e292a47b5a103347bdc4?width=1136&format=jpeg');
   border-color:white;
-  border-style:groove;
+  border-style: groove;
   border-radius: 15px;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture6 {
-  padding: 150px;
-  background-image:url('http://cdn.cnn.com/cnnnext/dam/assets/220831162631-08-downtown-circle-znera-space-dubai.jpg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://i.pinimg.com/originals/0f/df/e9/0fdfe9c8a8e55ca576b07f6b33d1b0b2.jpg');
   border-color:white;
   border-style: groove;
   border-radius: 15px;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture7 {
-  padding: 150px;
-  background-image:url('https://www.cityscape-intelligence.com/sites/cet.com/files/architecture-projects-2022-katara.jpg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://www.cityscape-intelligence.com/sites/cet.com/files/architecture-projects-2022-katara.jpg');
   border-color:white;
   border-style: groove;
   border-radius: 15px;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture8 {
-  padding: 150px;
-  background-image:url('https://cdn.trendhunterstatic.com/phpthumbnails/20/20210/20210_1_800.jpeg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://cdn.trendhunterstatic.com/phpthumbnails/20/20210/20210_1_800.jpeg');
   border-color:white;
   border-style: groove;
   border-radius: 15px;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 #picture9 {
-  padding: 150px;
-  background-image:url('https://homeadore.com/wp-content/uploads/2022/05/024-mountain-house-ro.jpg');
-  color: whitesmoke;
-  text-align: center;
+  padding: 130px;
+  background-image: url('https://homeadore.com/wp-content/uploads/2022/05/024-mountain-house-ro.jpg');
   border-color:white;
   border-style: groove;
   border-radius: 15px;
@@ -158,5 +166,6 @@
   background-color: black;
   color: whitesmoke;
   padding: 50px;
-  text-align: center;
+  text-align: left;
+  
 }
